package behavior.observer.ck;

public interface TopicListener {
    public void print(News news, boolean isNew);
}
